{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 77,
  "lineage": "40f8e76b-7bd5-3824-ebdf-586e0f95f769",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "byoip-ip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0449fd23f2105dceb",
            "domain": "vpc",
            "id": "eipalloc-09a254f35044b3e28",
            "network_interface": "eni-0931b0acc30c23ff5",
            "private_dns": "ip-192-168-1-252.ap-south-1.compute.internal",
            "private_ip": "192.168.1.252",
            "public_dns": "ec2-15-207-83-120.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.83.120",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0447a12f28fddb066",
            "arn": "arn:aws:ec2:ap-south-1:414832620205:instance/i-073ba3fbddb767960",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-073ba3fbddb767960",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02cb6026c552daa89",
            "private_dns": "ip-192-168-1-170.ap-south-1.compute.internal",
            "private_ip": "192.168.1.170",
            "public_dns": "ec2-13-127-69-81.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.69.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04abeaf52a849a508",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c531cff53b103de5",
            "tags": {
              "Name": "WordPress"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-058a0626aa2ceb198"
            ]
          },
          "dependencies": [
            "aws_security_group.public_subnets_wordpress_SG",
            "aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0732b62d310b80e97",
            "arn": "arn:aws:ec2:ap-south-1:414832620205:instance/i-02d58a2023c62429e",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02d58a2023c62429e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ecfd7305797b991f",
            "private_dns": "ip-192-168-2-229.ap-south-1.compute.internal",
            "private_ip": "192.168.2.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03a86a47d0fa1dee9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02ca78229d3e57a76",
            "tags": {
              "Name": "MySQL"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0de429c8ed581891a"
            ]
          },
          "dependencies": [
            "aws_security_group.private_subnets_mysql_SG",
            "aws_subnet.private-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:414832620205:internet-gateway/igw-06edebb7ae322ff49",
            "id": "igw-06edebb7ae322ff49",
            "owner_id": "414832620205",
            "tags": {
              "Name": "gaurav-vpc-task3-gateways"
            },
            "vpc_id": "vpc-07fd576d3755b2a3b"
          },
          "dependencies": [
            "aws_vpc.gaurav-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09a254f35044b3e28",
            "id": "nat-0c6d42664215fbac9",
            "network_interface_id": "eni-0931b0acc30c23ff5",
            "private_ip": "192.168.1.252",
            "public_ip": "15.207.83.120",
            "subnet_id": "subnet-0c531cff53b103de5"
          },
          "dependencies": [
            "aws_eip.byoip-ip",
            "aws_subnet.public-subnet",
            "aws_vpc.gaurav-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-085fb4834a734550e",
            "owner_id": "414832620205",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06edebb7ae322ff49",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_subnets_routing_tables"
            },
            "vpc_id": "vpc-07fd576d3755b2a3b"
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.gaurav-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_for_nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0772da62dcf4541be",
            "owner_id": "414832620205",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c6d42664215fbac9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_subnet_routing_tables"
            },
            "vpc_id": "vpc-07fd576d3755b2a3b"
          },
          "dependencies": [
            "aws_nat_gateway.gw",
            "aws_vpc.gaurav-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a174861cc2b0dcf5",
            "route_table_id": "rtb-085fb4834a734550e",
            "subnet_id": "subnet-0c531cff53b103de5"
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_route_table.r",
            "aws_subnet.public-subnet",
            "aws_vpc.gaurav-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routetable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f4ea0365561e45e",
            "route_table_id": "rtb-0772da62dcf4541be",
            "subnet_id": "subnet-02ca78229d3e57a76"
          },
          "dependencies": [
            "aws_eip.byoip-ip",
            "aws_nat_gateway.gw",
            "aws_route_table.route_for_nat",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.gaurav-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_subnets_mysql_SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:414832620205:security-group/sg-0de429c8ed581891a",
            "description": "ssh,http for private access only ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de429c8ed581891a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "mysql",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-058a0626aa2ceb198"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-058a0626aa2ceb198"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private_gaurav_vpc",
            "name_prefix": null,
            "owner_id": "414832620205",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private_subnets_mysql_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-07fd576d3755b2a3b"
          },
          "dependencies": [
            "aws_security_group.public_subnets_wordpress_SG",
            "aws_vpc.gaurav-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_subnets_wordpress_SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:414832620205:security-group/sg-058a0626aa2ceb198",
            "description": "ssh,http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-058a0626aa2ceb198",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public_gaurav_vpc",
            "name_prefix": null,
            "owner_id": "414832620205",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public_subnets_wordpress_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-07fd576d3755b2a3b"
          },
          "dependencies": [
            "aws_vpc.gaurav-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:414832620205:subnet/subnet-02ca78229d3e57a76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-02ca78229d3e57a76",
            "map_public_ip_on_launch": false,
            "owner_id": "414832620205",
            "tags": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-07fd576d3755b2a3b"
          },
          "dependencies": [
            "aws_vpc.gaurav-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:414832620205:subnet/subnet-0c531cff53b103de5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0c531cff53b103de5",
            "map_public_ip_on_launch": false,
            "owner_id": "414832620205",
            "tags": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-07fd576d3755b2a3b"
          },
          "dependencies": [
            "aws_vpc.gaurav-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gaurav-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:414832620205:vpc/vpc-07fd576d3755b2a3b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0c829f570ccec0b0d",
            "default_route_table_id": "rtb-0f17519cb4b1a4349",
            "default_security_group_id": "sg-0e60517992d6dfb0c",
            "dhcp_options_id": "dopt-5d9f5136",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07fd576d3755b2a3b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f17519cb4b1a4349",
            "owner_id": "414832620205",
            "tags": {
              "Name": "gaurav-vpc-task3"
            }
          }
        }
      ]
    }
  ]
}